# warden

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  warden-mvp-design.md
docs/superpowers/plans/: 2026-04-12-dependency-graph.md  2026-04-12-warden-mvp.md
docs/superpowers/specs/: 2026-04-12-dependency-graph-design.md  2026-04-12-warden-mvp-design.md  2026-04-13-warden-skills-design.md
specs/001-warden-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-warden-mvp/checklists/: requirements.md
specs/001-warden-mvp/contracts/: cli.md
tests/: conftest.py  test_agent_context.py  test_agent_runner.py  test_ask.py  test_cli.py  test_config.py  test_git_hooks.py  test_git_repo.py  test_graph_manager.py  test_graph_models.py  test_graph_parser.py  test_integration.py  test_orchestrator.py  test_review.py  test_state.py  test_understand.py
warden/: cli.py  config.py  orchestrator.py  skills.py  state.py
warden/agents/: ask.py  context.py  review.py  runner.py  understand.py
warden/git/: hooks.py  repo.py
warden/graph/: manager.py  models.py  parser.py
